# polygons

./: .gitignore  .gitmodules  README.md  angle.tex  area.tex  install.txt  repport.docx  slides.pptx  testATCDominantPoint  turning_function.tex  turning_function_simple.tex
app/compare_gui/: CMakeLists.txt  window.cpp  window.h
app/comparison_speedtest/: CMakeLists.txt  main.cpp
app/descriptors/: CMakeLists.txt  main.cpp
app/descriptors_gui/: CMakeLists.txt  main.cpp  window.cpp  window.h
app/kmeans_gui/: CMakeLists.txt  main.cpp  window.cpp  window.h
app/nearest_comparison/: CMakeLists.txt  main.cpp
app/nearest_comparison_class_stat/: CMakeLists.txt  main.cpp
app/nearest_gui/: CMakeLists.txt  main.cpp  window.cpp  window.h
app/simplify_gui/: CMakeLists.txt  CMakeLists.txt.user.9cf9343  main.cpp  window.cpp  window.h
app/turning_function/: CMakeLists.txt  CMakeLists.txt.user.88106d9  window.cpp  window.h
lib/: converter.cpp  converter.h  logger.cpp  logger.h  parser.cpp  parser.h  polygon.cpp  polygon.h  simplif.cpp  simplif.h  simplification.cpp  turningfunction.cpp  turningfunction.h  visualizer.cpp  visualizer.h
lib/kmeans/: CMakeLists.txt
lib/kmeans/src/: kmeans.cpp  kmeans.h  main.cpp  point.cpp  point.h
lib/kmeans/src/sample_data/: test.txt
lib/simpleplots/: simpleplotwidget.h  spabstractplotter.cpp  splineplotter.cpp  splineplotter.h  sppolygonplotter.cpp  sppolygonplotter.h
shapes/: carre2 (copy).sdp  carre2.sdp  f.sdp  hand-left.sdp  hand-left.txt  main.sdp  test.sdp  v.sdp
shapes/Data_4/: out.csv
shapes/ipol/: carre.sdp  carre.txt  image.pgm  img2freeman  main3-2.sdp  main3-2.txt  main5-1.txt
tools/: convert  freeman2sdp
tools/ATC_IPOL/: decompositionAlgorithm.cpp  main.cpp
tools/ATC_IPOL/Results/: pentagonNoise4MeanThickness_0.txt  pentagonNoise4_0.sdp  pentagonNoise4_10.sdp  pentagonNoise4_11.sdp  pentagonNoise4_12.sdp  pentagonNoise4_14.sdp  pentagonNoise4_16.sdp  pentagonNoise4_18.sdp  pentagonNoise4_19.sdp  pentagonNoise4_20.sdp  pentagonNoise4_21.sdp  pentagonNoise4_22.sdp  pentagonNoise4_24.sdp  pentagonNoise4_25.sdp  pentagonNoise4_26.sdp  pentagonNoise4_28.sdp  pentagonNoise4_3.sdp  pentagonNoise4_30.sdp  pentagonNoise4_34.sdp  pentagonNoise4_35.sdp  pentagonNoise4_36.sdp  pentagonNoise4_37.sdp  pentagonNoise4_38.sdp  pentagonNoise4_41.sdp  pentagonNoise4_42.sdp  pentagonNoise4_43.sdp  pentagonNoise4_45.sdp  pentagonNoise4_47.sdp  pentagonNoise4_48.sdp  pentagonNoise4_50.sdp  pentagonNoise4_51.sdp  pentagonNoise4_53.sdp  pentagonNoise4_54.sdp  pentagonNoise4_55.sdp  pentagonNoise4_59.sdp  pentagonNoise4_6.sdp  pentagonNoise4_63.sdp  pentagonNoise4_64.sdp  pentagonNoise4_66.sdp  pentagonNoise4_67.sdp  (+2 more)
